--- a/ZBC website/package.json
+++ b/ZBC website/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
